{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 33,
  "lineage": "6a2014d2-1cba-82f9-ea16-18c18ff3c300",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-14T00:10:20.866-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/airflow-gke-338120-352104/global/firewalls/flask-app-firewall",
            "name": "flask-app-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/airflow-gke-338120-352104/global/networks/my-custom-mode-network",
            "priority": 1000,
            "project": "airflow-gke-338120-352104",
            "self_link": "https://www.googleapis.com/compute/v1/projects/airflow-gke-338120-352104/global/firewalls/flask-app-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-14T00:10:20.834-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/airflow-gke-338120-352104/global/firewalls/allow-ssh",
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/airflow-gke-338120-352104/global/networks/my-custom-mode-network",
            "priority": 1000,
            "project": "airflow-gke-338120-352104",
            "self_link": "https://www.googleapis.com/compute/v1/projects/airflow-gke-338120-352104/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20221102",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/airflow-gke-338120-352104/zones/asia-southeast1-b/disks/flask-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/airflow-gke-338120-352104/zones/asia-southeast1-b/instances/flask-vm",
            "instance_id": "5653287600314402538",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "xFbPzo96j-8=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python3-pip rsync; pip install flask",
            "name": "flask-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.126.90.189",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/airflow-gke-338120-352104/global/networks/my-custom-mode-network",
                "network_ip": "10.0.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/airflow-gke-338120-352104/regions/asia-southeast1/subnetworks/my-custom-subnet",
                "subnetwork_project": "airflow-gke-338120-352104"
              }
            ],
            "project": "airflow-gke-338120-352104",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/airflow-gke-338120-352104/zones/asia-southeast1-b/instances/flask-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "asia-southeast1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/airflow-gke-338120-352104/global/networks/my-custom-mode-network",
            "name": "my-custom-mode-network",
            "project": "airflow-gke-338120-352104",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/airflow-gke-338120-352104/global/networks/my-custom-mode-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-14T00:10:23.290-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/airflow-gke-338120-352104/regions/asia-southeast1/subnetworks/my-custom-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "my-custom-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/airflow-gke-338120-352104/global/networks/my-custom-mode-network",
            "private_ip_google_access": false,
            "project": "airflow-gke-338120-352104",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/airflow-gke-338120-352104/regions/asia-southeast1/subnetworks/my-custom-subnet"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}